@@ -1,6 +1,8 @@
 Current
 -------
- -Fixed #28600 - Select only required fields from a Expanded Entity using OData Service
+- Fixed #28748 - Exception using a logical condition with null inside parentheses in a $filter expression-
+- Fixed #28792 - Modify documentation about "Deploying into the Denodo embedded web container" for denodo 5.5
+- Fixed #28600 - Select only required fields from a Expanded Entity using OData Service
 - Fixed #28507 - Change web.xml to give a default version without CORS configuration
 - Fixed #28595 - 'eq' and 'ne' functions are not working when the variable name contains 'eq' or 'ne' respectively
 
